// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Theme > renders with empty ui correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
  <!--v-if--><span data-slot="label" class="truncate">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Theme > renders with nested theme overriding outer theme correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary px-[2.234rem]">
  <!--v-if--><span data-slot="label" class="truncate text-[#000]">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Theme > renders with theme applied to alert correctly 1`] = `
"<div data-orientation="vertical" data-slot="root" class="relative overflow-hidden w-full rounded-lg p-4 flex gap-2.5 items-start bg-primary text-inverted border-[3px]">
  <!--v-if-->
  <div data-slot="wrapper" class="min-w-0 flex-1 flex flex-col">
    <div data-slot="title" class="text-sm font-medium">Alert</div>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</div>"
`;

exports[`Theme > renders with theme applied to badge correctly 1`] = `
"<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 bg-primary text-inverted rounded-[1.234rem]"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`Theme > renders with theme applied to button base slot correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary px-[1.234rem]">
  <!--v-if--><span data-slot="label" class="truncate text-[#ff0]">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Theme > renders with theme applied to multiple component types correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary px-[1.234rem]">
  <!--v-if--><span data-slot="label" class="truncate">Button</span>
  <!--v-if-->
</button>
<span data-slot="base" class="font-medium inline-flex items-center text-xs px-2 py-1 gap-1 bg-primary text-inverted rounded-[1.234rem]"><!--v-if--><span data-slot="label" class="truncate">Badge</span>
<!--v-if--></span>"
`;

exports[`Theme > renders with theme not affecting unrelated component correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors px-2.5 py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary">
  <!--v-if--><span data-slot="label" class="truncate">Button</span>
  <!--v-if-->
</button>"
`;

exports[`Theme > renders with ui prop taking priority over theme correctly 1`] = `
"<button type="button" data-slot="base" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors py-1.5 text-sm gap-1.5 text-inverted bg-primary hover:bg-primary/75 active:bg-primary/75 disabled:bg-primary aria-disabled:bg-primary focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-primary px-[2.234rem]">
  <!--v-if--><span data-slot="label" class="truncate text-[#ff0]">Button</span>
  <!--v-if-->
</button>"
`;
